2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	* Makefile.am:
	* common/Makefile.am:
	Forgot to add some files to the dist

2005-05-26  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:	Releasing 0.2.2

2005-05-26  Edward Hervey  <bilboed@bilboed.com>

	* Makefile.am: (EXTRA_DIST):
	added normal equivalent of .in files

2005-05-25  Christian Schaller  <cschalle@wildsrc.fluendo.lan>

	* gnl/gnltimeline.c:
	* gnl/gnlsource.c:
	* gnl/gnlcomposition.c:
	GCC4 fixes

2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	Handle case where the seek is delayed (using pending_seek)

	* docs/libs/gnonlin-sections.txt:
	* gnl/gnltimeline.h:
	* gnl/gnlsource.h:
	* gnl/gnloperation.h:
	* gnl/gnlcomposition.h:
	removed extern _details

	* configure.ac : Releasing 0.2.1

2005-05-25  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c: (source_queue_media): 
	missing closing parenthisis
	removed unused 'filled' variable

2005-05-25  Wouter Paesen <wouter@kangaroot.net>

	Reviewed by : Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c: (source_queue_media):
	memleak bugfix

2005-05-23  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	safer pre-rolling
	* gnl/gnltimeline.c:
	add query/event handling to timeline timer's pads
	fixed bug in request pad handling

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlsource.c:
	No more using global "gnonlin" debug category, using element specific categories

2005-05-06  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnltimeline.c:
	Added "src_%s" PadTemplate so _request_new_pad() works...
	
	* gnl/gnl.c: 
	* gnl/gnl.h:
	* gnl/gnlcomposition.c:
	* gnl/gnlobject.c:
	* gnl/gnloperation.c:
	* gnl/gnltimeline.c:
	No more using global "gnonlin" debug category, using element specific categories

	* docs/libs/tmpl/gnloperation.sgml: added "element" property documentation

	* docs/libs/gnonlin-sections.txt: removed GST_CAT_DEFAULT

2005-05-06  Edward Hervey  <bilboed@bilboed.com>